app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */
@import "bootstrap-sprockets";
@import "bootstrap";


.full {
  background: url("https://www.ciroc.com/img/bg_gradient-noRepeat.jpg") no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

// home page
.tron-top-buffer {
  margin-top: 80px;
}

// .navbar {
//   background-color:orange;
//   border-color:orange;
// }

.panel-image {
  height: 242px;
}

.panel-content {
  height: 141px;
}

.home-quote {
  margin-bottom: 3%;
}


// about page

.about-discription {
  margin-top: 1%;
  margin-bottom: 3%;
}

.about-bottom-buffer {
  margin-bottom: 3%;
}


// terms page

.terms-description {
  margin-top: 3%;
}

.terms-bottom-buffer {
  margin-bottom: 40%;
}

// faq

.faq-top-question-buffer {
  margin-top: 2%;
  margin-bottom: 5%
}

.faq-content-buffer {
  margin-bottom: 15%;
}

.faq-question-buffer {
  margin-bottom: 35%;
  margin-top: 70%;
}

// footer

hr {
  border-top: solid 1px #777777;
}

.footer-content {
  height: 75px;
}





// end

